--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,12 @@
         "ts": "never",
         "tsx": "never"
       }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   },
   "settings": {
