--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "eslint-import-resolver-typescript": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +45,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.23.0",
